--- a/funfactspage.html
+++ b/funfactspage.html
@@ -8,8 +8,11 @@
     <title>Fun facts</title>
 </head>
 <body>
+    <a href="./index.html"><h1 class="logo">SN</h1></a>
     <div class="funfactspage">
-       <a href="./index.html"><h1 class="logo">SN</h1></a>
+        
+        <img src="./facts1.png" alt="">
+       <!-- 
         <h4 class="factpurple" id="factpurple1">1 human year is equal to 7 dog years!</h4>
         <h4 class="factpurple" id="factpurple2">Most dogs sweat through their paws.</h4>
         <h4 class="factpurple" id="factpurple3">They curl up into a ball for protection.</h4>
@@ -20,7 +23,7 @@
         <h1 class="funfactsheading1">IT'S TIME FOR</h1>
         <h1 class="funfactsheading2">FUN FACTS</h1>
         <img class="textimg" src="./image_28-2-removebg-preview.png" alt="">
-        <h5 class="bestfunfact">Three dogs survived the titanic.<br> Don't you want to have one for<br> your next journey?</h5>
+        <h5 class="bestfunfact">Three dogs survived the titanic.<br> Don't you want to have one for<br> your next journey?</h5> -->
    </div>
 </body>
 </html>
