--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
 
         <input type="tel" placeholder="Phone Number" class="textbox in3" />
 
-        <button class="submit">Submit</button>
+        <div class="btn-submit">
+          <button class="submit">Submit</button>
+        </div>
+        
       </form>
     </div>
   </body>
