--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
     <div class="main">
       <img
-        src="./Screen Shot 2022-09-29 at 8.45.50 PM.png"
+        src="./home-dogs.png"
         alt=""
         class="dogs_img"
       />
